--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   shared_preferences: ^2.0.17
+  flutter_riverpod: ^2.3.0
+  barcode_widget: ^2.0.3
+  screen_brightness: ^0.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
